test/sema/typeck/generic/assign-to-type-param-fn.dora
fn f[T]() { T = 10; }

//====================
// error: lvalue expected for assignment
// --> assign-to-type-param-fn.dora:1:13
//  | fn f[T]() { T = 10; }
//                ~
//  | 
// 1 error found.
